--- a/styles/styles.css
+++ b/styles/styles.css
@@ -81,7 +81,7 @@ body._lock{
 /*--------------------------------------------------------------------------MAIN----------------------------------------------------------------------*/
 
 .bg_img{
-    background-image: url(../images/bg_main_easy.webp);
+    background-image: url(../images/photo_main_test.webp);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
