--- a/styles/styles.css
+++ b/styles/styles.css
@@ -992,7 +992,7 @@ iframe{
     left: 50%;
     transform: translate(-50%, 0);
    
-    transition: all 0.3s ease 0s;
+    transition: all 0.5s ease 0s;
    
 
 }
@@ -1002,28 +1002,18 @@ bottom: 0;
 .nav_line_el {
     width: 128px;
     height: 3px; 
-    margin-top: 20px;
-    margin-bottom: 20px;
-
     border-radius: 22px;
     background:  var(--Light-grey, #ECECEC);
-   
-    margin-left: auto;
-    margin-right: auto;
-    /* margin-top: auto;
-    margin-bottom: auto; */
-  
-    display: flex; 
-  align-items: center
-
-   /* display: flex;
-    align-items: center;
-    justify-content: center; */
-
+}
+.nav_line{
+    padding-top: 30px;
+    padding-bottom: 30px;
+    display: flex;
+    justify-content: center;
 }
 
 .nav_list {
-    height: 550px;
+    height: 500px;
     overflow: hidden;
     overflow: scroll;
     margin-top: 0;
