--- a/styles/styles.css
+++ b/styles/styles.css
@@ -993,6 +993,8 @@ iframe{
     transform: translate(-50%, 0);
    
     transition: all 0.5s ease 0s;
+    z-index: 15;
+
    
 
 }
@@ -1006,10 +1008,13 @@ bottom: 0;
     background:  var(--Light-grey, #ECECEC);
 }
 .nav_line{
-    padding-top: 30px;
-    padding-bottom: 30px;
+    /* padding-top: 30px;
+    padding-bottom: 30px; */
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 63px;
+    width: 100%;
 }
 
 .nav_list {
@@ -1017,6 +1022,7 @@ bottom: 0;
     overflow: hidden;
     overflow: scroll;
     margin-top: 0;
+    padding-top: 5px;
  
 }
 .nav_list_item {
